client/index.html add script tags for both underscore and backbone

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="assets/css/main.css">
+  <script src="bower_components/underscore/underscore-min.js"></script>
+  <script src="bower_components/backbone/backbone-min.js"></script>
+  <script>
+
+    var test  = Backbone.Model.extend({});
+
+  </script>
   <meta charset="UTF-8">
   <title>greenfield project</title>
 </head>
