Progress on web audio test - successfully serving sample wav on loop.

--- a/client/index.html
+++ b/client/index.html
@@ -14,5 +14,10 @@
 </head>
 <body>
   anything here?
+
+  <!-- Buffer Loader Class for loading audio -->
+  <script src="./scripts/BufferLoader.js"></script>
+  <!-- Web Audio Test Script -->
+  <script src="./scripts/background-autoplay.js"></script>
 </body>
 </html>
