(feat) Progress on interaction - sound now plays on button.

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   anything here?
-
+  <button id="click">Play me!</button>
   <!-- Buffer Loader Class for loading audio -->
   <script src="./scripts/BufferLoader.js"></script>
   <script src="./scripts/background-autoplay.js"></script>
