--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,8 @@
   <title>greenfield project</title>
 </head>
 <body>
-  anything here?
   <button id="click">Play me!</button>
+  <button id="loop">Play background!</button>
   <!-- Buffer Loader Class for loading audio -->
   <script src="./scripts/BufferLoader.js"></script>
   <script src="./scripts/background-autoplay.js"></script>
