renamed scripts to client

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
   <script src="bower_components/underscore/underscore-min.js"></script>
   <script src="bower_components/backbone/backbone-min.js"></script>
   
-  <script src="scripts/views/appView.js"></script>
-  <script src="scripts/views/eventEntryView.js"></script>
-  <script src="scripts/views/eventListView.js"></script>
+  <script src="client/views/appView.js"></script>
+  <script src="client/views/eventEntryView.js"></script>
+  <script src="client/views/eventListView.js"></script>
   
-  <script src="scripts/models/app.js"></script>
-  <script src="scripts/models/eventModel.js"></script>
-  <script src="scripts/collections/eventCollection.js"></script>
+  <script src="client/models/app.js"></script>
+  <script src="client/models/eventModel.js"></script>
+  <script src="client/collections/eventCollection.js"></script>
   
 
   <meta charset="UTF-8">
