edited the script src path

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="css/styles.css">
-  <script src="./bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="./bower_components/underscore/underscore-min.js"></script>
-  <script src="./bower_components/backbone/backbone-min.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/underscore/underscore-min.js"></script>
+  <script src="bower_components/backbone/backbone-min.js"></script>
   
-  <script src="./client/views/appView.js"></script>
-  <script src="./client/views/eventEntryView.js"></script>
-  <script src="./client/views/eventListView.js"></script>
+  <script src="client/views/appView.js"></script>
+  <script src="client/views/eventEntryView.js"></script>
+  <script src="client/views/eventListView.js"></script>
   
-  <script src="./client/models/app.js"></script>
-  <script src="./client/models/eventModel.js"></script>
-  <script src="./client/collections/eventCollection.js"></script>
+  <script src="client/models/app.js"></script>
+  <script src="client/models/eventModel.js"></script>
+  <script src="client/collections/eventCollection.js"></script>
   
 
   <meta charset="UTF-8">
