--- a/public/index.html
+++ b/public/index.html
@@ -28,22 +28,12 @@
   <!-- this is where the app will rendered and re-rendered -->
   </div>
   <!-- Buffer Loader Class for loading audio -->
-  <!--script src="./scripts/BufferLoader.js"></script-->
-  <!--script src="./scripts/background-autoplay.js"></script-->
+  <script src="./client/audio-helpers.js"></script>
+  <script src="./client/loop.js"></script>
 
 </body>
 
-  <script type="text/javascript">
-
-  var socket = io();
-
-  socket.on('looping', function() {
-    console.log('Client heard it!');
-  });
-  socket.on('watch', function(event) {
-    console.log('someone starred you!');
-    console.log(event);
-  });
+  <script>
   var mockEvents = [
     {data : "fake data 01"},
     {data : "fake data 02"},
@@ -59,6 +49,21 @@
   var gitEventCollection = new eventCollection(mockEvents);
   var gitEventApp = new app({eventList : gitEventCollection});
   var gitEventAppView = new appView({model : gitEventApp});
+
+  </script>
+
+  <script type="text/javascript">
+  var socket = io();
+
+  socket.on('looping', function() {
+    console.log('Client heard it!');
+  });
+
+  socket.on('watch', function(event) {
+    console.log('someone starred you!');
+    playSound(background);
+    gitEventApp.addNewEvent({data: event.type});
+  });
 
   </script>
 </html>
