--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
   socket.on('event', function(event) {
     console.log('event!');
     
-    if (event.type === 'pull-request') {
+    if (event.type === 'pull_request') {
       playSound(loaded[0]);
     } 
 
