fixed eventModel instantiation for new events

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       playSound(loaded[2]);
     } 
 
-    gitEventApp.addNewEvent({data: event.type});
+    gitEventApp.addNewEvent({data: event});
   });
   </script>
 </html>
