(fix) change index title

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <script src="/socket.io/socket.io.js"></script>
 
   <meta charset="UTF-8">
-  <title>GitHub Blink</title>
+  <title>GitHub Bling</title>
 </head>
 <body>
   <header class="headerArea">
