--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <!-- Buffer Loader Class for loading audio -->
   <script src="./client/audio-helpers.js"></script>
 
+  <!--  -->
   <script src="client/data/data.js"></script>
   <script src="client/views/appView.js"></script>
   <script src="client/views/eventEntryView.js"></script>
@@ -32,9 +33,7 @@
     <h1 class="logo">GitHub Bling</h1>
     <span class = 'quote'>To Stay Sane, Commit More Often</span>
 
-    <!-- experimental feature: to choose between mario and Allen mode><-->
-    <!--button class = "switchMode">Allen Mode</button-->
-
+    <button class = "switchMode">Toggle Sound Library</button>
   </header>
 
   <div class="mainAppView">
@@ -59,7 +58,7 @@
   //backbone collection for all events:
   var gitEventCollection = new eventCollection([{data : fakeEvent}, {data : fakeEvent}]);
 
-  //initialize default songlibrary
+  //initialize library with data.js - data.js holds event information & file format info for the assets
   var library = new soundModel({data: soundData});
 
   //initiate the main app and its corresponding view here
