--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <!-- Buffer Loader Class for loading audio -->
   <script src="./client/audio-helpers.js"></script>
 
+  <!--  -->
   <script src="client/data/data.js"></script>
   <script src="client/views/appView.js"></script>
   <script src="client/views/eventEntryView.js"></script>
@@ -31,7 +32,7 @@
   <header class="headerArea">
     <h1 class="logo">GitHub Bling</h1>
     <span class = 'quote'>To Stay Sane, Commit More Often</span>
-    <button class = "switchMode">Allen Mode</button>
+    <button class = "switchMode">Toggle Sound Library</button>
   </header>
 
   <div class="mainAppView">
@@ -41,7 +42,6 @@
 </body>
 
  <script type="text/javascript">
- //demo data
   var fakeEvent = {
       type: 'thumb check',
       time: '10/10/10 : 10:10:10',
@@ -51,13 +51,11 @@
       repo: 'repo of nothingness',
       repo_url: 'http://fake.com'
     };
-
-  // start the backbone here
   
   //backbone collection for all events:
-  // var gitEventCollection = new eventCollection([{data : fakeEvent}, {data : fakeEvent}]);
   var gitEventCollection = new eventCollection([]);
-  //initialize default songlibrary
+
+  //initialize library with data.js - data.js holds event information & file format info for the assets
   var library = new soundModel({data: soundData});
 
   //initiate the main app and its corresponding view here
