--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
   <title>GitRad.io</title>
+  <link rel='stylesheet' href='./css/normalize.css'>
+  <link rel='stylesheet' href='./css/styles.css'>
 </head>
 <body>
   <div id='root'></div>
