Implement github oauth flow.

--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
   <div class="welcome-container">
     <h2>Welcome to GitRadio!</h2>
     <div class="login-button">
-      <a href="/login">Login with Github</a>
+      <a href="/auth/login">Login with Github</a>
     </div>
   </div> 
 </body>
