Clean up front-end files and temporarily remove socket connection.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>GitRad.io</title>
+  <title>GitRadio</title>
   <link rel='stylesheet' href='./css/normalize.css'>
   <link rel='stylesheet' href='./css/styles.css'>
 </head>
